--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -38,7 +38,7 @@
     </div>
 
     <div id="QRcode">
-        <img src="https://res.cloudinary.com/dizziweb-365p/images/w_300,h_300,c_fill/f_auto,q_auto/v1638452224/qrcode-dizziweb/qrcode-dizziweb.png?_i=AA">
+        <img src="<%- parsed_setting_desc.qr_code[0]%>">
     </div>
     <div class="row"></div>
 
