--- a/views/partials/layout/header.ejs
+++ b/views/partials/layout/header.ejs
@@ -5,7 +5,7 @@
     </div>
     <div class="col-md-8"></div>
     <div class="col-md-1 burgerMenu" id="burgerMenu">
-        <a><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1024px-Hamburger_icon.svg.png"></a>
+        <a><img src="<%- parsed_bio.icon_burger %>"></a>
     </div>
     <div class="col-md-1"></div>
 </div>
@@ -19,7 +19,7 @@
             </div>
             <div class="col-md-8"></div>
             <div class="col-md-1 burgerMenu" id="closingMenu">
-                <a><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-close-512.png"></a>
+                <a><img src="<%- parsed_bio.icon_close %>"></a>
             </div>
             <div class="col-md-1"></div>
         </div>
