--- a/views/partials/contactSocialMedia.ejs
+++ b/views/partials/contactSocialMedia.ejs
@@ -2,7 +2,7 @@
     <div class="row col-12 socialMediaIcons">
         <div class="col-1">
             <a href="mailto:<%- parsed_bio.email %>" target="_blank">
-                <img src="https://icon-library.com/images/e-mail-icon-png/e-mail-icon-png-11.jpg">
+                <img src="<%- parsed_bio.icon_mail %>">
             </a>
         </div>
         <div class="col-11 d-flex justify-content-start align-items-center">
@@ -15,7 +15,7 @@
     <div class="row col-12 socialMediaIcons">
         <div class="col-1">
             <a href="<%- userInfos.links.linkedin %>" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/61/61109.png">
+                <img src="<%- parsed_bio.icon_linkedin %>">
             </a>
         </div>
         <div class="col-11 d-flex justify-content-start align-items-center">
@@ -28,7 +28,7 @@
     <div class="row col-12 socialMediaIcons">
         <div class="col-1">
             <a href="<%- userInfos.links.instagram %>" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/87/87390.png">
+                <img src="<%- parsed_bio.icon_instagram %>">
             </a>
         </div>
         <div class="col-11 d-flex justify-content-start align-items-center">
