--- a/public/style/contact.css
+++ b/public/style/contact.css
@@ -1,5 +1,5 @@
 body{
-    grid-template-rows: 0fr 0fr 0fr 0fr 1fr; 
+    grid-template-rows: 0fr 0fr 0fr 0fr 1fr !important; 
 }
 
 .socialMediaIcons img{
