--- a/views/pages/artworks.ejs
+++ b/views/pages/artworks.ejs
@@ -30,6 +30,8 @@
     <%- include('../partials/artworks/artworksGallery'); %>
   </div>
 
+  <div class="row"></div>
+
   <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
     <%- include('../partials/layout/footer'); %>
   </footer>
