--- a/public/style/style.css
+++ b/public/style/style.css
@@ -17,7 +17,7 @@ body{
     background-size: var(--custom-background-size);
     padding-top:50px;
     display:grid;
-    /* grid-template-rows: 0fr 0fr 0fr 1fr;  */
+    grid-template-rows: 0fr 0fr 0fr 1fr; 
     min-height:100vh;
     overflow-x: hidden;
     /* overflow-x: hidden; */
