adding dl icons

--- a/views/partials/downloadCvPortfolio.ejs
+++ b/views/partials/downloadCvPortfolio.ejs
@@ -8,7 +8,7 @@
   <div class="row col-12 d-flex wantMoreIcons">
     <div class="col-1">
       <a href="<%- parsed_bio.lien_cv %>" target="_blank">
-        <img src="https://www.mymagic.ch/wp-content/uploads/2020/09/download-logo-png-image-77292.png">
+        <img src="<%- parsed_bio.icon_dl %>">
       </a>
     </div>
 
@@ -21,7 +21,7 @@
   <div class="row col-12 d-flex wantMoreIcons">
     <div class="col-1">
       <a href="<%- parsed_bio.lien_book %>" target="_blank">
-        <img src="https://www.mymagic.ch/wp-content/uploads/2020/09/download-logo-png-image-77292.png">
+        <img src="<%- parsed_bio.icon_dl %>">
       </a>
     </div>
     <div class="col-11 d-flex justify-content-start align-items-center">
