--- a/views/pages/lab.ejs
+++ b/views/pages/lab.ejs
@@ -46,8 +46,8 @@
 
     <div class="row up-arrow-container">
       <div class="col-12 d-flex justify-content-center align-items-center">
-        <a href="#top"> <div class="arrowLinkProjects">
-          <img src="/images/arrow-up.svg">
+        <a href="#top"> <div class="arrowLinkProjects arrowUp">
+          <img src="/images/Vector_41.svg">
         </div> </a>
       </div>
     </div>
