--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -146,11 +146,11 @@
   <style>
 
     .arrowLinkProjects {
-      height: 50px;
+      height: 25px;
     }
 
     .arrowLinkProjects img {
-      height: 50px;
+      height: 25px;
     }
     
     .arrowLeft {
@@ -189,5 +189,15 @@
       font-weight: var(--custom-h2-weight);
       color: var(--custom-h2-color);
       letter-spacing: var(--custom-h2-letter-spacing);
+    }
+
+    @media screen and (max-width: 980px) {
+      .arrowLinkProjects {
+        height: 50px;
+      }
+
+      .arrowLinkProjects img {
+        height: 50px;
+      }
     }
   </style>
