putting icons in dribbble setting post parsing setting post displaying icons

--- a/views/partials/contactSocialMedia.ejs
+++ b/views/partials/contactSocialMedia.ejs
@@ -2,7 +2,7 @@
     <div class="row col-12 socialMediaIcons">
         <div class="col-1">
             <a href="mailto:<%- parsed_bio.email %>" target="_blank">
-                <img src="<%- parsed_bio.icon_mail %>">
+                <img src="<%- parsed_setting_desc.icon_mail[0] %>">
             </a>
         </div>
         <div class="col-11 d-flex justify-content-start align-items-center">
@@ -15,7 +15,7 @@
     <div class="row col-12 socialMediaIcons">
         <div class="col-1">
             <a href="<%- userInfos.links.linkedin %>" target="_blank">
-                <img src="<%- parsed_bio.icon_linkedin %>">
+                <img src="<%- parsed_setting_desc.icon_linkedin[0] %>">
             </a>
         </div>
         <div class="col-11 d-flex justify-content-start align-items-center">
@@ -28,7 +28,7 @@
     <div class="row col-12 socialMediaIcons">
         <div class="col-1">
             <a href="<%- userInfos.links.instagram %>" target="_blank">
-                <img src="<%- parsed_bio.icon_instagram %>">
+                <img src="<%- parsed_setting_desc.icon_instagram[0] %>">
             </a>
         </div>
         <div class="col-11 d-flex justify-content-start align-items-center">
