--- a/views/partials/downloadCvPortfolio.ejs
+++ b/views/partials/downloadCvPortfolio.ejs
@@ -8,7 +8,7 @@
   <div class="row col-12 d-flex wantMoreIcons">
     <div class="col-1">
       <a href="<%- parsed_bio.lien_cv %>" target="_blank">
-        <img src="<%- parsed_bio.icon_dl %>">
+        <img src="<%- parsed_setting_desc.icon_dl[0] %>">
       </a>
     </div>
 
@@ -21,7 +21,7 @@
   <div class="row col-12 d-flex wantMoreIcons">
     <div class="col-1">
       <a href="<%- parsed_bio.lien_book %>" target="_blank">
-        <img src="<%- parsed_bio.icon_dl %>">
+        <img src="<%- parsed_setting_desc.icon_dl[0] %>">
       </a>
     </div>
     <div class="col-11 d-flex justify-content-start align-items-center">
