--- a/views/partials/layout/footer.ejs
+++ b/views/partials/layout/footer.ejs
@@ -5,9 +5,9 @@
     </div>
 
     <div class="col-4 d-flex justify-content-evenly align-items-center socialMediasFooter">
-        <a href="<%- userInfos.links.instagram %>" target="_blank"><img id="leftIcon" src="<%- parsed_bio.icon_instagram %>"></a>
-        <a href="<%- userInfos.links.linkedin %>" target="_blank"><img id="centerIcon" src="<%- parsed_bio.icon_linkedin %>"></a>
-        <a href="https://dribbble.com" target="_blank"><img id="rightIcon" src="<%- parsed_bio.icon_dribbble %>"></a>
+        <a href="<%- userInfos.links.instagram %>" target="_blank"><img id="leftIcon" src="<%- parsed_setting_desc.icon_instagram[0] %>"></a>
+        <a href="<%- userInfos.links.linkedin %>" target="_blank"><img id="centerIcon" src="<%- parsed_setting_desc.icon_linkedin[0] %>"></a>
+        <a href="https://dribbble.com" target="_blank"><img id="rightIcon" src="<%- parsed_setting_desc.icon_dribbble[0] %>"></a>
     </div>
 
     <div class="col-4 d-flex justify-content-center align-items-center legalMentions">
