--- a/views/partials/layout/header.ejs
+++ b/views/partials/layout/header.ejs
@@ -5,7 +5,7 @@
     </div>
     <div class="col-md-8"></div>
     <div class="col-md-1 burgerMenu" id="burgerMenu">
-        <a><img src="<%- parsed_bio.icon_burger %>"></a>
+        <a><img src="<%- parsed_setting_desc.icon_burger[0] %>"></a>
     </div>
     <div class="col-md-1"></div>
 </div>
@@ -19,7 +19,7 @@
             </div>
             <div class="col-md-8"></div>
             <div class="col-md-1 burgerMenu" id="closingMenu">
-                <a><img src="<%- parsed_bio.icon_close %>"></a>
+                <a><img src="<%- parsed_setting_desc.icon_close[0] %>"></a>
             </div>
             <div class="col-md-1"></div>
         </div>
