--- a/views/partials/layout/header.ejs
+++ b/views/partials/layout/header.ejs
@@ -12,7 +12,7 @@
 
 
 <div class="navmenu" id="navmenu">
-    <div class="container-lg .safari_only"></div>
+    <div class="container-lg .safari_only">
         <div class="row d-flex justify-content-center align-items-center header">
             <div class="col-md-2 d-flex justify-content-end profilePicture">
                 <a href="home"><img src="<%- userInfos.avatar_url %>"></a>
@@ -27,9 +27,9 @@
             <% for(i=0;i<parsed_setting_desc.menu.length; i++) { %>
                 <div class="col-md-2"></div>
                 <div class="col-md-10 links-container">
-                    <a href="<%- parsed_setting_desc.menu_link[i] %>" class="menu-links"><h1><%- parsed_setting_desc.menu[i] %></h1></a>
+                    <a href="<%- parsed_setting_desc.menu_link[i] %>" class="menu-links"> <h1><%- parsed_setting_desc.menu[i] %></h1> </a>
                 </div>
             <% } %>
         </div>
     </div>
-</div> 
+</div>
