--- a/views/partials/aboutMe/aboutMeInfos.ejs
+++ b/views/partials/aboutMe/aboutMeInfos.ejs
@@ -4,8 +4,8 @@
             <% if(isTextLeft == true){ %>
                 <div class="col-2"></div>
 
-                <div class="col-4 d-flex flex-column justify-content-center align-items-start">
-                    <%- parsed_about_desc.textes[i] %>
+                <div class="col-4 d-flex flex-column justify-content-center align-items-start textProject">
+                    <div class="textProject"><%- parsed_about_desc.textes[i] %></div>
                 </div>
 
                 <div class="col-2"></div>
@@ -25,7 +25,7 @@
                 <div class="col-2"></div>
                 
                 <div class="col-4 d-flex flex-column justify-content-center align-items-start">
-                    <%- parsed_about_desc.textes[i] %>
+                    <div class="textProject"><%- parsed_about_desc.textes[i] %></div>
                 </div>
                 <div class="col-2"></div>
             </div>
