--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -94,15 +94,15 @@
       <% project_gallery_array.forEach(item => {
         if (helper.isImg(item) == false){
           if (imgIsFirst) { %>
-            <div class="col-4 d-flex flex-column justify-content-center align-items-start textProject">
-              <%- item %>
+            <div class="col-4 d-flex flex-column justify-content-center align-items-start">
+              <div class="textProject"><%- item %></div>
             </div>
             <div class="col-2"></div>
             <% imgIsFirst = false;
           } else { %>
             <div class="col-2"></div>
-            <div class="col-4 d-flex flex-column justify-content-center align-items-start textProject">
-              <%- item %>
+            <div class="col-4 d-flex flex-column justify-content-center align-items-start">
+              <div class="textProject"><%- item %></div>
             </div>
             <% imgIsFirst = true;
           } %>
@@ -174,6 +174,7 @@
       font-size: var(--custom-p-size);
       font-weight: var(--custom-p-weight);
       color: var(--custom-p-color);
+      background-color: var(--custom-background-color);
 
     }
     .textProject h1{
