--- a/public/style/contact.css
+++ b/public/style/contact.css
@@ -17,7 +17,7 @@ body{
 #QRcode img{
     width:100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 .socials-container{
     margin: 32px 0;
