--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -76,12 +76,27 @@
 
     <div class="row brief-title">
       <div class="col-2"></div>
-      <div class="col-8">
+      <div class="col-5">
         <h2>Brief:</h2>
+      </div>
+      <div class="col-3 d-flex flex-column justify-content-center tags-project">
+        <div class="row">
+          <div class="col-md-12 d-flex justify-content-end align-items-center project-date">
+            <h6> <%- project_date %> </h6>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12 d-flex inline-flex justify-content-end align-items-center tags-container">
+            <% currentProject.tags.forEach(tag => { %>
+              <p><%- tag %></p>
+            <% }) %>
+          </div>
+        </div>
       </div>
       <div class="col-2"></div>
     </div>
-    <div class="row">
+    <div class="row brief-content">
       <div class="col-2"></div>
       <div class="col-8">
         <p><%- project_brief %></p>
@@ -167,6 +182,14 @@
 
     .title-project {
       text-align: center!important;
+    }
+
+    .brief-title {
+      margin-top: 16px;
+    }
+
+    .brief-content {
+      margin: 16px 0px;
     }
 
     .textProject{
