--- a/public/style/projects.css
+++ b/public/style/projects.css
@@ -14,7 +14,7 @@ body {
 }
 
 .tags-container p {
-  padding: 0 0 0 16px;
+  padding: 0 16px 0 0;
   color: var(--custom-p-color);
   font-size: 0.9em;
   text-align: end;
