--- a/public/style/projects.css
+++ b/public/style/projects.css
@@ -13,10 +13,9 @@ body {
   margin-bottom: 24px;
 }
 
-.tags-container p {
+.tags-container h6 {
   padding: 0 16px 0 0;
   color: var(--custom-p-color);
-  font-size: 0.9em;
   text-align: end;
   text-transform: uppercase;
 }
