--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -73,6 +73,41 @@
     </div>
     
 <!-- ########################## DESCRIPTION PROJECT (SOUS FORME DE GALLERY) ########################## -->
+    <div class="row tags-mouse-container">
+      <div class="col-2"></div>
+      <div class="col-7 d-flex flex-column justify-content-start tags-project">
+        <div class="row">
+          <div class="col-md-12 d-flex justify-content-start align-items-center project-date">
+            <h5> <%- project_date %> </h5>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12 d-flex inline-flex justify-content-start align-items-center tags-container">
+            <% currentProject.tags.forEach(tag => { %>
+              <h6><%- tag %></h6>
+            <% }) %>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-1 mouse-container">
+        <div class="col-6 d-flex flex-column justify-content-center tags-project">
+          <div class="row">
+            <div class="col-md-12 d-flex justify-content-center align-items-center mouse">
+              <img src="<%- parsed_setting_desc.icon_mouse[0] %>">
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12 d-flex inline-flex justify-content-center align-items-center scroll-msg">
+              <h6> SCROLL </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-2"></div>
+    </div>
 
     <div class="row brief-title">
       <div class="col-2"></div>
@@ -148,7 +183,7 @@
     .arrowLinkProjects {
       height: 25px;
     }
-
+    
     .arrowLinkProjects img {
       height: 25px;
     }
@@ -156,13 +191,22 @@
     .arrowLeft {
       transform: rotate(180deg);
     }
-
+    
     .arrowUp {
       transform: rotate(270deg);
     }
-
+    
     .up-arrow-container {
       margin-bottom: 64px;
+    }
+    
+    .tags-mouse-container {
+      margin-top: 8px;
+    }
+
+    .mouse img {
+      width: 32px;
+      height: 32px;
     }
 
     .title-project {
@@ -171,10 +215,6 @@
 
     .brief-title {
       margin-top: 16px;
-    }
-
-    .brief-content {
-      margin: 16px 0px;
     }
 
     .textProject{
