--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -72,20 +72,21 @@
       <div class="col-lg-2"></div>
     </div>
     
-<!-- ########################## DESCRIPTION PROJECT (SOUS FORME DE GALLERY) ########################## -->
+<!-- ########################## TAGS / DATE AND MOUSE ########################## -->
+
     <div class="row tags-mouse-container">
-      <div class="col-lg-2"></div>
+      <div class="col-md-1 ol-lg-2"></div>
       <div class="col-md-10 col-lg-7 d-flex flex-column justify-content-start tags-project">
         <div class="row">
           <div class="col-md-12 d-flex justify-content-start align-items-center project-date">
-            <h5> <%- project_date %> </h5>
+            <h4> <%- project_date %> </h4>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-12 d-flex inline-flex justify-content-start align-items-center tags-container">
             <% currentProject.tags.forEach(tag => { %>
-              <h6><%- tag %></h6>
+              <h5><%- tag %></h5>
             <% }) %>
           </div>
         </div>
@@ -106,22 +107,24 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-md-1 col-lg-2"></div>
     </div>
 
+<!-- ########################## DESCRIPTION PROJECT (SOUS FORME DE GALLERY) ########################## -->
+
     <div class="row brief-title">
-      <div class="col-2"></div>
-      <div class="col-8">
+      <div class="col-md-1 col-lg-2"></div>
+      <div class="col-md-10 col-lg-8">
         <h2>Brief:</h2>
       </div>
-      <div class="col-2"></div>
+      <div class="col-lg-2"></div>
     </div>
     <div class="row brief-content">
-      <div class="col-2"></div>
-      <div class="col-8">
+      <div class="col-md-1 col-lg-2"></div>
+      <div class="col-md-10 col-lg-8">
         <p><%- project_brief %></p>
       </div>
-      <div class="col-2"></div>
+      <div class="col-md-1 col-lg-2"></div>
     </div>
 
     <% var imgIsFirst = false; %>
@@ -129,14 +132,14 @@
       <% project_gallery_array.forEach(item => {
         if (helper.isImg(item) == false){
           if (imgIsFirst) { %>
-            <div class="col-4 d-flex flex-column justify-content-center align-items-start">
+            <div class="col-md-5 col-lg-4 d-flex flex-column justify-content-center align-items-start">
               <div class="textProject"><%- item %></div>
             </div>
-            <div class="col-2"></div>
+            <div class="col-md-1 col-lg-2"></div>
             <% imgIsFirst = false;
           } else { %>
-            <div class="col-2"></div>
-            <div class="col-4 d-flex flex-column justify-content-center align-items-start">
+            <div class="col-md-1 col-lg-2"></div>
+            <div class="col-md-5 col-lg-4 d-flex flex-column justify-content-center align-items-start">
               <div class="textProject"><%- item %></div>
             </div>
             <% imgIsFirst = true;
@@ -145,14 +148,14 @@
         <% } else { %>
           
           <% if(imgIsFirst) { %>
-            <div class="col-4 d-flex align-items-end justify-content-end">
+            <div class="col-md-5 col-lg-4 d-flex align-items-end justify-content-end">
               <img src="<%- item %>" class="imgContentProjet">
             </div>        
-            <div class="col-2"></div>
+            <div class="col-md-1 col-lg-2"></div>
             <% imgIsFirst = false;
           } else { %>
-            <div class="col-2"></div>         
-            <div class="col-4 d-flex align-items-start justify-content-start">
+            <div class="col-md-1 col-lg-2"></div>         
+            <div class="col-md-5 col-lg-4 d-flex align-items-start justify-content-start">
               <img src="<%- item %>" class="imgContentProjet">
             </div>
             <% imgIsFirst = true;
@@ -227,7 +230,7 @@
       font-weight: var(--custom-p-weight);
       color: var(--custom-p-color);
       background-color: var(--custom-background-color);
-
+      padding: 8px;
     }
     .textProject h1{
       font-family: var(--custom-h1-font);
@@ -235,6 +238,7 @@
       font-weight: var(--custom-h1-weight);
       color: var(--custom-h1-color);
       letter-spacing: var(--custom-h1-letter-spacing);
+      padding: 8px;
     }
     .textProject h2{
       font-family: var(--custom-h2-font);
@@ -242,8 +246,12 @@
       font-weight: var(--custom-h2-weight);
       color: var(--custom-h2-color);
       letter-spacing: var(--custom-h2-letter-spacing);
+      padding: 8px;
     }
 
+    .textProject p {
+      padding: 8px;
+    }
     @media screen and (max-width: 980px) {
       .mouse-container {
         display: none;
