+++ padding on brief title and content

--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -220,8 +220,13 @@
       text-align: center!important;
     }
 
-    .brief-title {
+    .brief-title h2{
       margin-top: 16px;
+      padding: 12px;
+    }
+
+    .brief-content p{
+      padding: 12px;
     }
 
     .textProject{
