fixing tags and date

--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -75,7 +75,7 @@
 <!-- ########################## TAGS / DATE AND MOUSE ########################## -->
 
     <div class="row tags-mouse-container">
-      <div class="col-md-1 ol-lg-2"></div>
+      <div class="col-md-1 col-lg-2"></div>
       <div class="col-md-10 col-lg-7 d-flex flex-column justify-content-start tags-project">
         <div class="row">
           <div class="col-md-12 d-flex justify-content-start align-items-center project-date">
@@ -92,7 +92,7 @@
         </div>
       </div>
 
-      <div class="col-md-2 col-lg-1 mouse-container">
+      <div class="col-md-1 col-lg-1 mouse-container">
         <div class="col-md-12 d-flex flex-column justify-content-center tags-project">
           <div class="row">
             <div class="col-md-12 d-flex justify-content-center align-items-center mouse">
