changing srcoll size & color and mouse align

--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -102,7 +102,7 @@
 
           <div class="row">
             <div class="col-md-12 d-flex inline-flex justify-content-end align-items-center scroll-msg">
-              <h6> SCROLL </h6>
+              <h2> SCROLL </h2>
             </div>
           </div>
         </div>
@@ -202,13 +202,17 @@
     .up-arrow-container {
       margin-bottom: 64px;
     }
-    
+
+    .title-project {
+      text-align: center!important;
+    }
+
     .tags-mouse-container {
       margin-top: 8px;
     }
     
     .mouse {
-      margin-left: 16px;
+      margin-left: 4px;
     }
 
     .mouse img {
@@ -216,8 +220,8 @@
       height: 32px;
     }
 
-    .title-project {
-      text-align: center!important;
+    .scroll-msg h2 {
+      font-size: 20px;
     }
 
     .brief-title h2{
