changing margin between mouse and scroll text

--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -214,6 +214,10 @@
     .mouse {
       margin-left: 4px;
     }
+    
+    .mouse {
+      height: 37px;
+    }
 
     .mouse img {
       width: 32px;
@@ -222,6 +226,8 @@
 
     .scroll-msg h2 {
       font-size: 20px;
+      margin-top: 6px;
+      margin-bottom:0px;
     }
 
     .brief-title h2{
