--- a/public/style/style.css
+++ b/public/style/style.css
@@ -147,6 +147,10 @@ p{
     font-weight: 600;
 }
 
+.links-container a:hover h1 {
+    color: var( --custom-accent-color);
+}
+
 /* _::-webkit-full-page-media, _:future, :root .safari_only {
     margin-left: 0px !important; margin-right: 0px !important; padding-left: 0px !important; padding-right: 0px !important;
   } */
