--- a/views/partials/artworks/artworksFilters.ejs
+++ b/views/partials/artworks/artworksFilters.ejs
@@ -50,6 +50,9 @@
     color: inherit;
   }
 
+  .button:hover {
+    color:var(--custom-accent-color);
+  }
   @media screen and (max-width:980px) {
     .filters button {
       padding: 24px 32px;
