--- a/views/partials/layout/header.ejs
+++ b/views/partials/layout/header.ejs
@@ -26,9 +26,10 @@
         <div class="row d-flex justify-content-center align-items-center">
             <% for(i=0;i<parsed_setting_desc.menu.length; i++) { %>
                 <div class="col-md-2"></div>
-                <div class="col-md-10 links-container">
-                    <a href="<%- parsed_setting_desc.menu_link[i] %>" class="menu-links"> <h1><%- parsed_setting_desc.menu[i] %></h1> </a>
+                <div class="col-md-4 links-container">
+                    <a href="<%- parsed_setting_desc.menu_link[i] %>" class="menu-links"> <h1> <%- parsed_setting_desc.menu[i]%> </h1> </a>
                 </div>
+                <div class="col-md-6"></div>
             <% } %>
         </div>
     </div>
