fixing filters hover

--- a/views/partials/artworks/artworksFilters.ejs
+++ b/views/partials/artworks/artworksFilters.ejs
@@ -51,7 +51,7 @@
   }
 
   .button:hover {
-    color:var(--custom-accent-color);
+    color:var(--custom-filter-button-active-color);
   }
   @media screen and (max-width:980px) {
     .filters button {
