--- a/views/pages/games.ejs
+++ b/views/pages/games.ejs
@@ -22,7 +22,7 @@
             <button class="button is-checked" id="memory">Memory</button>
             <button class="button" id="morpion">Tic Tac Toe</button>
             <button class="button" id="pong">Pong</button>
-            <button class="button" id="clear">clear console</button>
+            <button class="button d-none" id="clear">clear console</button>
         </div>
     </div>
 
