--- a/views/partials/layout/header.ejs
+++ b/views/partials/layout/header.ejs
@@ -1,3 +1,4 @@
+<%- include('../loader'); %>
 
 <div class="row d-flex justify-content-center align-items-center header">
     <div class="col-md-2 d-flex justify-content-end profilePicture">
