--- a/public/style/style.css
+++ b/public/style/style.css
@@ -112,6 +112,23 @@ p{
 
 }
 
+.loadingPage {
+    z-index: 100;
+    position: absolute;
+    left:0;
+    top:0;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    background-color: var(--custom-background-color);
+}  
+
+.stop-scrolling {
+    height: 100vh;
+    overflow-x: hidden;
+}
+
 .footer {
     width: 100vw;
     height: 50px;
