--- a/views/pages/aboutMe.ejs
+++ b/views/pages/aboutMe.ejs
@@ -42,14 +42,14 @@
 
     }
     .textProject h1{
-      font-family: var(--custom-h1-font);
+      font-family: var(--custom-title-font);
       font-size: var(--custom-h1-size);
       font-weight: var(--custom-h1-weight);
       color: var(--custom-h1-color);
       letter-spacing: var(--custom-h1-letter-spacing);
     }
     .textProject h2{
-      font-family: var(--custom-h2-font);
+      font-family: var(--custom-title-font);
       font-size: var(--custom-h2-size);
       font-weight: var(--custom-h2-weight);
       color: var(--custom-h2-color);
