no-scroll for loader
Co-authored-by: Nils Boisson <zaynbsn@users.noreply.github.com>

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -5,7 +5,7 @@
     <%- include('../partials/heads/contactHead'); %>
 </head>
 
-<body class="container-lg safari_only">
+<body class="container-lg safari_only no-scroll">
 
     <header>
         <%- include('../partials/layout/header'); %>
