--- a/public/style/style.css
+++ b/public/style/style.css
@@ -122,7 +122,7 @@ p{
     display: flex;
     flex-direction: row;
     background-color: var(--custom-background-color);
-}  
+}
 
 .stop-scrolling {
     height: 100vh;
@@ -138,6 +138,31 @@ p{
     color: #fff;
     overflow: hidden;
 }
+
+.textProject{
+    font-family: var(--custom-p-font);
+    font-size: var(--custom-p-size);
+    font-weight: var(--custom-p-weight);
+    color: var(--custom-p-color);
+    background-color: var(--custom-background-color);
+    border-radius: 8px;
+  }
+  .textProject h1{
+    font-family: var(--custom-title-font);
+    font-size: var(--custom-h1-size);
+    font-weight: var(--custom-h1-weight);
+    color: var(--custom-h1-color);
+    letter-spacing: var(--custom-h1-letter-spacing);
+    padding-bottom: 8px;
+  }
+  .textProject h2{
+    font-family: var(--custom-title-font);
+    font-size: var(--custom-h2-size);
+    font-weight: var(--custom-h2-weight);
+    color: var(--custom-h2-color);
+    letter-spacing: var(--custom-h2-letter-spacing);
+    padding-bottom: 8px;
+  }
 
 .infos-container {
     width: 100%;
