--- a/views/pages/artworks.ejs
+++ b/views/pages/artworks.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include('../partials/heads/artworksHead'); %>
 </head>
-<body class="container-lg safari_only">
+<body class="container-lg safari_only no-scroll">
 
   <%- include('../partials/socialMedia'); %>
 
