--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -10,7 +10,7 @@
 
     </head>
 
-    <body class="container-lg safari_only">
+    <body class="container-lg safari_only no-scroll">
       <header>
           <%- include('../partials//layout/header'); %>
       </header>
@@ -228,41 +228,8 @@
 
     .brief-title h2{
       margin-top: 16px;
-      padding: 12px;
     }
 
-    .brief-content p{
-      padding: 12px;
-    }
-
-    .textProject{
-      font-family: var(--custom-p-font);
-      font-size: var(--custom-p-size);
-      font-weight: var(--custom-p-weight);
-      color: var(--custom-p-color);
-      background-color: var(--custom-background-color);
-      padding: 8px;
-    }
-    .textProject h1{
-      font-family: var(--custom-h1-font);
-      font-size: var(--custom-h1-size);
-      font-weight: var(--custom-h1-weight);
-      color: var(--custom-h1-color);
-      letter-spacing: var(--custom-h1-letter-spacing);
-      padding: 8px;
-    }
-    .textProject h2{
-      font-family: var(--custom-h2-font);
-      font-size: var(--custom-h2-size);
-      font-weight: var(--custom-h2-weight);
-      color: var(--custom-h2-color);
-      letter-spacing: var(--custom-h2-letter-spacing);
-      padding: 8px;
-    }
-
-    .textProject p {
-      padding: 8px;
-    }
     @media screen and (max-width: 980px) {
       .mouse-container {
         display: none;
