--- a/views/partials/artworks/artworksTags.ejs
+++ b/views/partials/artworks/artworksTags.ejs
@@ -1,7 +1,7 @@
 <div class="d-flex flex-row">
     <% if(shotsInfos[i].tags.length >= 1){
       shotsInfos[i].tags.forEach(tag => { %>
-        <div class="tag">
+        <div class="tag background-text-color">
           <%- tag %>
         </div>
       <% })
