--- a/views/partials/heads/commonHead.ejs
+++ b/views/partials/heads/commonHead.ejs
@@ -52,5 +52,7 @@
 
         --custom-span-color: <%- parsed_setting_desc.span[0] %>;
         --custom-span-weight: <%- parsed_setting_desc.span[1] %>;
+
+        --custom-footer-background-color: <%- parsed_setting_desc.footer_bgcolor %>;
     }
 </style>
