--- a/public/style/style.css
+++ b/public/style/style.css
@@ -124,15 +124,15 @@ p{
     width: 100vw;
     display: flex;
     flex-direction: row;
-    background-color: var(--custom-background-color);
+    background-color: var(--custom-loader-background-color);
 }
 
 .loadingPage img {
-    height: 100px;
-    width: 100px;
+    height: 300px;
+    width: 300px;
     position: absolute;
-    left: calc(50% - 50px);
-    top: calc(50% - 50px);
+    left: calc(50% - 150px);
+    top: calc(50% - 150px);
 }
 
 .stop-scrolling {
@@ -146,7 +146,7 @@ p{
     position:relative;
     margin-left: calc(-50vw + 50%);
     background-color: var(--custom-footer-background-color);
-    color: var(--custom-p-color);
+    color: var(--custom-footer-color);
     overflow: hidden;
 }
 
