--- a/views/partials/loader.ejs
+++ b/views/partials/loader.ejs
@@ -1,3 +1,3 @@
 <div class="loadingPage">
-  <img src="<%- parsed_setting_desc.gif_loader[0] %>">
+  <img src="<%- parsed_setting_desc.loader_gif[0] %>">
 </div>
