--- a/views/pages/lab.ejs
+++ b/views/pages/lab.ejs
@@ -46,7 +46,7 @@
     <div class="row up-arrow-container">
       <div class="col-12 d-flex justify-content-center align-items-center">
         <a href="#top"> <div class="arrowLinkProjects arrowUp">
-          <img src="/images/Vector_41.svg">
+          <img src="<%- parsed_setting_desc.icon_arrow[0] %>">
         </div> </a>
       </div>
     </div>
