--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -29,7 +29,7 @@
               <% } else { %>
                 <a href="<%= shotsInfos[j-1].id %>">
                   <div class="arrowLinkProjects arrowLeft">
-                    <img src="/images/Vector_41.svg">
+                    <img src="<%- parsed_setting_desc.icon_arrow[0] %>">
                   </div>
                 </a>
               <%}
@@ -56,7 +56,7 @@
                 <% } else { %>
                   <a href="<%= shotsInfos[j+1].id %>">
                     <div class="arrowLinkProjects">
-                      <img src="/images/Vector_41.svg">
+                      <img src="<%- parsed_setting_desc.icon_arrow[0] %>">
                     </div>
                   </a>
                 <%}
@@ -168,7 +168,7 @@
     <div class="row up-arrow-container">
       <div class="col-12 d-flex justify-content-center align-items-center">
         <a href="#top"> <div class="arrowLinkProjects arrowUp">
-          <img src="/images/Vector_41.svg">
+          <img src="<%- parsed_setting_desc.icon_arrow[0] %>">
         </div> </a>
       </div>
     </div>
