fixing loader bg color

--- a/views/partials/heads/commonHead.ejs
+++ b/views/partials/heads/commonHead.ejs
@@ -5,7 +5,7 @@
 <style>
     :root {
 
-        --custom-loader-background-color: <%- parsed_setting_desc.loader_bgcolor[0] %>
+        --custom-loader-background-color: <%- parsed_setting_desc.loader_bgcolor[0] %>;
         --custom-title-font: <%- parsed_setting_desc.font_name[0] %>;
         --custom-p-font: <%- parsed_setting_desc.font_name[1] %>;
 
