--- a/views/partials/artworks/artworksFilters.ejs
+++ b/views/partials/artworks/artworksFilters.ejs
@@ -56,6 +56,7 @@
   @media screen and (max-width:980px) {
     .filters button {
       padding: 24px 32px;
+      font-size: var(--custom-filter-button-responsive-size);
     }
     
   }
