--- a/views/partials/aboutMe/aboutMeInfos.ejs
+++ b/views/partials/aboutMe/aboutMeInfos.ejs
@@ -1,33 +1,33 @@
 <% isTextLeft = true;
     for(let i=0; i < parsed_about_desc.images.length; i++){ %>
-        <div class="row about-rows d-flex flex-row">
+        <div class="row about-rows d-flex flex-row justify-content-md-center">
             <% if(isTextLeft == true){ %>
-                <div class="col-2"></div>
+                <div class="col-lg-2"></div>
 
-                <div class="col-4 d-flex flex-column justify-content-center align-items-start textProject">
+                <div class="col-md-12 col-lg-4 d-flex flex-column justify-content-center align-items-start textProject margin-bottom-32">
                     <div class="textProject"><%- parsed_about_desc.textes[i] %></div>
                 </div>
 
-                <div class="col-2"></div>
+                <div class="col-lg-1"></div>
                 
-                <div class="img-container col-2 d-flex flex-column justify-content-center align-items-center">
+                <div class="img-container col-md-12 col-lg-3 d-flex flex-column justify-content-center align-items-center">
                     <img src="<%- parsed_about_desc.images[i] %>">
                 </div>
-                <div class="col-2"></div>
+                <div class="col-lg-2"></div>
             </div>
                 <% isTextLeft = false;
             } else { %>
-                <div class="col-2"></div>
-                <div class="img-container col-2 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-lg-2 order-lg-1"></div>
+                <div class="img-container order-md-2 order-lg-2 col-md-12 col-lg-3 d-flex flex-column justify-content-center align-items-center">
                     <img src="<%- parsed_about_desc.images[i] %>">
                 </div>
-
-                <div class="col-2"></div>
+                    
+                <div class="col-lg-1 order-lg-3"></div>
                 
-                <div class="col-4 d-flex flex-column justify-content-center align-items-start">
+                <div class="order-md-1 order-lg-4 col-md-12 col-lg-4 d-flex flex-column justify-content-center align-items-lg-start margin-bottom-32">
                     <div class="textProject"><%- parsed_about_desc.textes[i] %></div>
                 </div>
-                <div class="col-2"></div>
+                <div class="col-lg-2 order-lg-5"></div>
             </div>
                 <% isTextLeft = true; %>
             
@@ -50,5 +50,18 @@
 }
 .about-rows{
     margin-bottom: 64px;
+}
+
+@media screen and (max-width:980px){
+    .img-container{
+        width: 80%;
+    }
+    .img-container img{
+        width: 100%;
+        height: 100%;
+    }
+    .about-rows{
+        padding: 0 80px;
+    }
 }
 </style>
