--- a/views/partials/aboutMe/aboutMeInfos.ejs
+++ b/views/partials/aboutMe/aboutMeInfos.ejs
@@ -4,7 +4,7 @@
             <% if(isTextLeft == true){ %>
                 <div class="col-lg-2"></div>
 
-                <div class="col-md-12 col-lg-4 d-flex flex-column justify-content-center align-items-start textProject margin-bottom-32">
+                <div class="col-md-12 col-lg-4 d-flex flex-column justify-content-center align-items-start margin-bottom-32">
                     <div class="textProject"><%- parsed_about_desc.textes[i] %></div>
                 </div>
 
