--- a/views/partials/contactSocialMedia.ejs
+++ b/views/partials/contactSocialMedia.ejs
@@ -1,11 +1,11 @@
 <div class="row d-flex mailInfo">
     <div class="row col-12 socialMediaIcons">
-        <div class="col-1">
+        <div class="col-2">
             <a href="mailto:<%- parsed_bio.email %>" target="_blank">
                 <img src="<%- parsed_setting_desc.icon_mail[0] %>">
             </a>
         </div>
-        <div class="col-11 d-flex justify-content-start align-items-center">
+        <div class="col-10 d-flex justify-content-start align-items-center icon-text">
             <p> <%- parsed_bio.email %></p>
         </div>
     </div>
@@ -13,12 +13,12 @@
 
 <div class="row d-flex linkedInInfo">
     <div class="row col-12 socialMediaIcons">
-        <div class="col-1">
+        <div class="col-2">
             <a href="<%- userInfos.links.linkedin %>" target="_blank">
                 <img src="<%- parsed_setting_desc.icon_linkedin[0] %>">
             </a>
         </div>
-        <div class="col-11 d-flex justify-content-start align-items-center">
+        <div class="col-10 d-flex justify-content-start align-items-center icon-text">
             <p> <%- parsed_bio.linkedin %> </p>
         </div>
     </div>
@@ -26,12 +26,12 @@
 
 <div class="row d-flex instagramInfo">
     <div class="row col-12 socialMediaIcons">
-        <div class="col-1">
+        <div class="col-2">
             <a href="<%- userInfos.links.instagram %>" target="_blank">
                 <img src="<%- parsed_setting_desc.icon_instagram[0] %>">
             </a>
         </div>
-        <div class="col-11 d-flex justify-content-start align-items-center">
+        <div class="col-10 d-flex justify-content-start align-items-center icon-text">
             <p><%- parsed_bio.instagram %></p>
         </div>
     </div>
