--- a/views/partials/downloadCvPortfolio.ejs
+++ b/views/partials/downloadCvPortfolio.ejs
@@ -6,25 +6,25 @@
 
 <div class="row d-flex" style="margin-top: 32px;">
   <div class="row col-12 d-flex wantMoreIcons">
-    <div class="col-1">
+    <div class="col-2">
       <a href="<%- parsed_bio.lien_cv %>" target="_blank">
         <img src="<%- parsed_setting_desc.icon_dl[0] %>">
       </a>
     </div>
 
-    <div class="col-11 d-flex justify-content-start align-items-center">
+    <div class="col-10 d-flex justify-content-start align-items-center icon-text">
       <p>Curriculum Vitae</p>
     </div>
   </div>
 </div>
-<div class="row d-flex">
+<div class="row d-flex portfolio-icon">
   <div class="row col-12 d-flex wantMoreIcons">
-    <div class="col-1">
+    <div class="col-2">
       <a href="<%- parsed_bio.lien_book %>" target="_blank">
         <img src="<%- parsed_setting_desc.icon_dl[0] %>">
       </a>
     </div>
-    <div class="col-11 d-flex justify-content-start align-items-center">
+    <div class="col-10 d-flex justify-content-start align-items-center icon-text">
       <p>Portfolio</p>
     </div>
   </div>
